--- a/app/views/restaurants/index.html.erb
+++ b/app/views/restaurants/index.html.erb
@@ -11,6 +11,7 @@
         <% restaurant.reviews.each do |review| %>
           <li>
             <%= review.thoughts %>, <strong><%= review.rating %></strong>/5
+            <%= link_to "Delete review", "/restaurants/#{restaurant.id}/reviews/#{review.id}" , method: :delete %>
           </li>
         <% end %>
       </ul>
